packages/webgl-media-editor/src/css/layout.css
/* MAIN CONTAINERS */
.host {
  /* SIZE */
  max-height: 90vh;
}

/* UNUSED ELEMENTS */
.miru--unused {
  display: none;
}

/* MAIN FLEX CONTAINERS */
.host,
.miru--main {
  display: flex;
  flex: 1 1 0%;
  flex-direction: column;
  width: 100%;
  min-height: 0;
}

/* CENTER WRAPPER */
.miru--center {
  position: relative;
  display: flex;
  flex: 1 1 0%;
  flex-direction: column;
  min-height: 0;
  
  /* CROPPER SPECIFIC PREVIEW WRAPPER */
  .miru--cropper-container {
    /* overflow: hidden !important; */
    position: relative;
    width: 100%;
    height: 100%;
    min-height: 0;
    

    :global .cropper-wrap-box{
      /* overflow: visible !important; */
    }
    
    /* .cropper-drag-box {
      padding: .5rem;
      opacity: 1;
    } */

    /* &>div {
      opacity: 0.25 !important;
      width: 100% !important;
      height: 100% !important;
    } */
  }
}

/* IMAGE PREVIEW */
.miru--preview {
  display: flex;
  flex: 1 1 0%;
  flex-direction: column;
  width: 100%;
  min-height: 0;
  max-height: 100%;
  padding: var(--gap-preview);

  & > canvas {
    width: 100%;
    height: 100%;
    margin: auto;
    object-fit: contain;
  }
}

/* MENU */
.miru--menu {
  display: flex;
  flex-direction: column;
  padding: var(--gap-default);

  /* MENU BUTTON ROW */
  .miru--menu__row,
  .miru--menu__row > fieldset {
    position: relative;
    display: grid;
    gap: var(--gap-default);
    grid-auto-columns: minmax(0, 1fr);
    grid-auto-flow: column;
    align-items: center;
    justify-content: space-around;
    height: var(--height-menu-row);
    overflow-y: hidden;
    grid-column: span var(--options-amt);
  }

  .miru--menu__row--scroll {
    display: flex;
    height: var(--height-menu-row-scroll);
    width: 100%;
  }
  .miru--menu__row--scroll > div {
    display: flex;
    height: var(--height-menu-row-scroll);
    width: auto;
    overflow: scroll hidden !important;
    scroll-behavior: smooth;
    scroll-snap-type: x mandatory !important;
    padding-bottom: var(--gap-default);
    padding-left: 50%;
    padding-right: 50%;
  }
  .miru--menu__row--scroll > div > label {
    width: 4rem;
    flex-shrink: 0;
    scroll-snap-align: center;
  }

  .miru--menu__slider-row {
    grid-template-columns: 2.5rem 5rem 1fr 5rem 2.5rem;

    svg {
      justify-self: center;
    }

    label {
      text-align: right;
    }

    svg + label {
      text-align: left;
    }
  }
}

.miru--filter-preview {
  z-index: 0;

  canvas {
    z-index: -1;
    transform: scaleY(-1);
  }
}

/* For WebKit browsers (Chrome, Safari, Edge) */
::-webkit-scrollbar {
  width: 40px; /* Set to a large value */
}

fieldset {
  min-inline-size: min-content !important;
  min-inline-size: 0 !important;
  border: 0;
  padding: 0;

  legend {
    display: none !important;
  }
}

fieldset,
[role="tablist"] {
  border-radius: var(--roundness-button);
}

fieldset label,
[role="tab"] {
  outline: none !important;
  &:not(:first-of-type, :last-of-type) {
    border-radius: 0;
  }
  &:first-of-type {
    border-radius: var(--roundness-button) 0 0 var(--roundness-button);
  }
  &:last-of-type {
    border-radius: 0 var(--roundness-button) var(--roundness-button) 0;
  }
}

